--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ debug=true
 spring.devtools.remote.restart.enabled=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql:///shiro?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql:///shiro?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
 spring.datasource.password=1111
 mybatis.mapper-locations=classpath:mapping/*.xml
