--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql:///shiro401?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql:///shiro401?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
 spring.datasource.password=zmn3311300
 mybatis.mapper-locations=classpath:mapping/*.xml
